--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Asteroides (Click)</title>
   <link rel="stylesheet" href="./styles.css" />
+  <link rel="manifest" href="./manifest.webmanifest">
+  <meta name="theme-color" content="#000000">
 </head>
 
 <body>
@@ -131,5 +133,6 @@
 
   <script type="module" src="./src/main.js"></script>
 </body>
+
 
 </html>
