feat: constrain transparency to five levels with 20% minimum

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
         <div class="row">
           <div class="fieldLabel">
-            <label for="opacityRange">Transparencia UI</label>
+            <label for="opacityRange">Transparência UI</label>
             <button class="hintBtn" type="button" aria-label="Ajuda sobre transparencia" aria-describedby="hintOpacity">?</button>
             <div id="hintOpacity" class="hintBox" role="tooltip">
               Controla a opacidade do HUD, icones e botoes da interface.
             </div>
           </div>
-          <input id="opacityRange" type="range" min="10" max="100" step="10" value="100" />
+          <input id="opacityRange" type="range" min="20" max="100" step="20" value="100" />
           <output id="opacityOut">100%</output>
         </div>
 
