--- a/index.html
+++ b/index.html
@@ -60,15 +60,13 @@
 
     <div id="version">Versão --</div>
     <div id="customModal" style="display:none;">
-      <div id="customBackdrop"></div>
-
       <div id="customCard" role="dialog" aria-modal="true" aria-labelledby="customTitle">
         <div id="customHeader">
           <div id="customTitle">Personalizar</div>
 
-          <button id="customCloseBtn" class="iconBtn" type="button" title="Fechar" style="position:static;">
+          <button id="customCloseBtn" class="btn backBtn" type="button" title="Voltar" aria-label="Voltar">
             <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <path d="M6 6l12 12M18 6L6 18" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" />
+              <path d="M15 6l-6 6 6 6" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </button>
         </div>
